Upgrade jakarta.el version for security reasons Remove illegal-access permission for testing
javax.el Version 3.0.0 has a security issue (CVE-2021-28170)
Because of the three-step generation approach we implemented for #63 we don't need this anymore.